objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Forecasting_Status__c</fullName>
        <label>Forecasting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upside</fullName>
                    <default>true</default>
                    <label>Upside</label>
                </value>
                <value>
                    <fullName>Probable</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Won/Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Store_Addressable__c</fullName>
        <description>Percent of revenue through the In-Store Channel that can be addressed by RichRelevance products. Negotiated with the customer. Enter as a number and percentage will be assigned.</description>
        <inlineHelpText>Percent of revenue through the In-Store Channel that can be addressed by RichRelevance products. Negotiated with the customer. Enter as a number and percentage will be assigned.</inlineHelpText>
        <label>In-Store % Addressable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Store_Opportunity_Amount__c</fullName>
        <description>Reporting only field that provides the dollar amount of the opportunity attributable to In-Store Opportunity Channel.</description>
        <formula>IF(Total_Addressable_Revenue__c&gt;0, Total_Addressable_In_Store_Revenue__c /  Total_Addressable_Revenue__c,null) *  Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting only field that provides the dollar amount of the opportunity attributable to In-Store Opportunity Channel.</inlineHelpText>
        <label>In-Store Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Store_Revenue__c</fullName>
        <description>Company&apos;s revenue from purchases made in-store.  Also known as brick and mortar stores.</description>
        <inlineHelpText>Company&apos;s revenue from purchases made in-store.  Also known as brick and mortar stores.</inlineHelpText>
        <label>In-Store Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Contract_Term__c</fullName>
        <description>Months</description>
        <inlineHelpText>Months</inlineHelpText>
        <label>Initial Contract Term</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If marked is true (checked) then opportunity is a change order.  Used for PSA integration.</description>
        <inlineHelpText>If marked is true (checked) then opportunity is a change order.  Used for PSA integration.</inlineHelpText>
        <label>Is Change Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRA__c</fullName>
        <description>Lists the associated JIRA ticket</description>
        <label>JIRA #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kohl_s_Booked_Amount__c</fullName>
        <label>Kohl&apos;s Booked Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kohl_s_Earned_Amount__c</fullName>
        <description>roll-up summary</description>
        <label>Kohl&apos;s Earned Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Retailer__c</field>
            <operation>equals</operation>
            <value>Kohls</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Kohl_s_Proposed_Amount__c</fullName>
        <label>Kohl&apos;s Proposed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kohl_s_Proposed_Retargeting_Amount__c</fullName>
        <label>Kohl&apos;s Proposed Retargeting Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kohl_s_Proposed_eCPM__c</fullName>
        <label>Kohl&apos;s Proposed eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kohl_s__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden for all except ads users.</description>
        <label>Kohl&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Status_del__c</fullName>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not drafted/received</fullName>
                    <default>true</default>
                    <label>Not drafted/received</label>
                </value>
                <value>
                    <fullName>Sent but no response</fullName>
                </value>
                <value>
                    <fullName>Business issues outstanding</fullName>
                </value>
                <value>
                    <fullName>Numerous legal issues to resolve</fullName>
                </value>
                <value>
                    <fullName>2 or fewer legal issues remaining.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Description__c</fullName>
        <label>DelAds: Why Did {rr} Win/ Lose Business?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual in Marketing who is working with Sales</description>
        <inlineHelpText>Individual in Marketing who is working with Sales</inlineHelpText>
        <label>Sales Development Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Dev_Close_Date__c</fullName>
        <description>Date when Marketing turned over the Opportunity to Sales</description>
        <label>Sales Dev Surpassed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meijer_Booked_Amount__c</fullName>
        <label>Meijer Booked Media Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meijer_Booked_Retargeting_Amount__c</fullName>
        <label>Meijer Booked Retargeting Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meijer_Proposed_Amount__c</fullName>
        <label>Meijer  Proposed Media Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meijer_Proposed_CPM__c</fullName>
        <label>Meijer Proposed Media CPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meijer_Proposed_Retargeting_Amount__c</fullName>
        <label>Meijer Proposed Retargeting Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meijer_Retargeting_CPM__c</fullName>
        <label>Meijer Retargeting CPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meijer_com__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meijer.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meijer_eCPM__c</fullName>
        <label>Meijer Media eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Addressable__c</fullName>
        <description>Percent of revenue through the Mobile Channel that can be addressed by RichRelevance products.  Negotiated with the customer.  Enter as a number and percentage will be assigned.</description>
        <inlineHelpText>Percent of revenue through the Mobile Channel that can be addressed by RichRelevance products.  Negotiated with the customer.  Enter as a number and percentage will be assigned.</inlineHelpText>
        <label>Mobile % Addressable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mobile_Opportunity_Amount__c</fullName>
        <formula>IF(Total_Addressable_Revenue__c&gt;0, Total_Addressable_Mobile_Rev__c /  Total_Addressable_Revenue__c,null) *  Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Revenue__c</fullName>
        <description>Revenue that company attributes as coming through it&apos;s Mobile Channel.  Mobile is defined as Mobile App, Mobile Device (Phone, Tablet, Smart Watch, etc.)</description>
        <inlineHelpText>Revenue that company attributes as coming through it&apos;s Mobile Channel.  Mobile is defined as Mobile App, Mobile Device (Phone, Tablet, Smart Watch, etc.)</inlineHelpText>
        <label>Mobile Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Best_Product__c</fullName>
        <description>Write out the next best product</description>
        <label>Next Best Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step_1__c</fullName>
        <description>Used to delineate high level next steps for the Close Plan (2-3 sentences).   Reviewed by executives on pipeline reports.</description>
        <inlineHelpText>Used to delineate high level next steps for the Close Plan (2-3 sentences).   Reviewed by executives on pipeline reports.</inlineHelpText>
        <label>Close Plan Next Step</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfSites__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Sites</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Projects__c</fullName>
        <description>Provides the number of projects in an Opportunity</description>
        <inlineHelpText>Provides the number of projects in an Opportunity</inlineHelpText>
        <label># of Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Opportunity_Amount__c</fullName>
        <formula>IF(Total_Addressable_Revenue__c&gt;0, Total_Addressable_Web_Online_Rev__c / Total_Addressable_Revenue__c,null) * Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web (Online) Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operations_Check_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Financial Operations must verify Opportunity is correct prior to Client Services creating a project from an opportunity.</description>
        <inlineHelpText>Financial Operations must verify Opportunity is correct prior to Client Services creating a project from an opportunity.</inlineHelpText>
        <label>Finance Check Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <formula>IF(IsClosed,( 
CloseDate - DATEVALUE(CreatedDate)), 
TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Counter_del__c</fullName>
        <description>For the Opportunity count roll up summary on Account object</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity (Counter)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Division__c</fullName>
        <formula>Owner.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(NO USE) Opportunity Owner Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Region__c</fullName>
        <description>Opportunity Region will default to current Account Region Value. The value can be editable after the opportunity creation</description>
        <inlineHelpText>Opportunity Region will default to current Account Region Value. The value can be editable after the opportunity creation</inlineHelpText>
        <label>Opportunity Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>SEMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market Development</fullName>
                </value>
                <value>
                    <fullName>Event / Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Retailer Referral</fullName>
                </value>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Avail Referral</fullName>
                </value>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>List Acquisition</fullName>
                </value>
                <value>
                    <fullName>EU Partnerships</fullName>
                </value>
                <value>
                    <fullName>IR News Link</fullName>
                </value>
                <value>
                    <fullName>Email Campaigns / Marketo</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Sub_REgion__c</fullName>
        <description>Opportunity Sub Region will default to current Account Sub Region Value. The value can be editable after the opportunity creation</description>
        <inlineHelpText>Opportunity Sub Region will default to current Account Sub Region Value. The value can be editable after the opportunity creation</inlineHelpText>
        <label>Opportunity Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC</fullName>
                    <label>APAC Other</label>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>FraBeLux</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>LATAM Other</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
                <value>
                    <fullName>SE Europe &amp; CIS</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>US East</fullName>
                </value>
                <value>
                    <fullName>US West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overstock_Proposed_eCPM__c</fullName>
        <label>Overstock Proposed eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overstock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Overstock site real estate being sold for this campaign?</description>
        <inlineHelpText>Is Overstock site real estate being sold for this campaign?</inlineHelpText>
        <label>Overstock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overwrite_Contract_Elements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Contract Elements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Details__c</fullName>
        <description>Commission Rate to partner on which revenue types and for what period</description>
        <inlineHelpText>Commission Rate to partner on which revenue types and for what period</inlineHelpText>
        <label>Partner Commission Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Influence__c</fullName>
        <description>Partner influence this opportunity</description>
        <inlineHelpText>Did the Partner influence this Opportunity?</inlineHelpText>
        <label>Partner Influence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Partner if Lead Source is Partner Referral</description>
        <inlineHelpText>If Lead Source is Partner Referral, this field is required</inlineHelpText>
        <label>Partner Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner, Industry Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Partner Name)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Overall_Budget__c</fullName>
        <label>Percentage of Overall Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Call_Center_Opportunity_Amount__c</fullName>
        <description>Reporting only field that provides the dollar amount of the opportunity attributable to Call Center (Phone) Channel.</description>
        <formula>IF(Total_Addressable_Revenue__c&gt;0, Total_Addressable_Phone_Con_Ctr_Rev__c  /  Total_Addressable_Revenue__c, null) *  Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting only field that provides the dollar amount of the opportunity attributable to Call Center (Phone) Channel.</inlineHelpText>
        <label>Phone (Call Center) Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone_Contact_Center_Addressable__c</fullName>
        <label>Phone (Contact Center) % Addressable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Contact_Center_Revenue__c</fullName>
        <description>Revenue that Company has at Phone Call Centers.  Used to Calculate pricing for an opportunity.</description>
        <inlineHelpText>Total Revenue that Company attribute through its Phone (Call Center) Channel.  Used to Calculate pricing for an opportunity.</inlineHelpText>
        <label>Phone (Contact Center) Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Sale_Lead__c</fullName>
        <label>Post-Sale Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allison Beatrice</fullName>
                </value>
                <value>
                    <fullName>Janet Kim</fullName>
                </value>
                <value>
                    <fullName>Julia Golub</fullName>
                </value>
                <value>
                    <fullName>Joe Weber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presidential_Sponsor__c</fullName>
        <formula>CASE(Account.Presidential_Sponsor__c , &quot;David Selinger&quot;, &quot;David Selinger&quot;,&quot;Eduardo Sanchez&quot;, &quot;Eduardo Sanchez&quot;,&quot;&quot;)</formula>
        <label>Presidential Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Changes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Date__c</fullName>
        <description>To determine when Pricing changes</description>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Notes__c</fullName>
        <label>Pricing Notes</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_FV_Check__c</fullName>
        <description>Opportunity Amount-Project Total Amount Roll Up</description>
        <formula>Amount -  Project_Grand_Total2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project FV Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Grand_Total2__c</fullName>
        <description>Sum of project total amount</description>
        <label>Project Grand Total New (Del. Hidden)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proof_of_Concept_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this is a proof of concept type of opportunity</description>
        <inlineHelpText>Check the box if this is a proof of concept opportunity</inlineHelpText>
        <label>Proof of Concept Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Surpassed_Date__c</fullName>
        <label>Proposal Surpassed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Estimated_Campaign_Amount__c</fullName>
        <description>Campaign spend allocated in the original RFP</description>
        <inlineHelpText>Campaign spend allocated in the original RFP</inlineHelpText>
        <label>Estimated Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_For_Loss__c</fullName>
        <label>Del Ads: Loss Commentary</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Target Guardrails</fullName>
                </value>
                <value>
                    <fullName>Budget Cut</fullName>
                </value>
                <value>
                    <fullName>Rates Too High</fullName>
                </value>
                <value>
                    <fullName>MDF/Co-op</fullName>
                </value>
                <value>
                    <fullName>Campaign Cancelled</fullName>
                </value>
                <value>
                    <fullName>Competition Won $</fullName>
                </value>
                <value>
                    <fullName>No Place To Park It</fullName>
                </value>
                <value>
                    <fullName>Not A Good Fit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason for Loss/Projected Loss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Lack of Budget</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Lack of Performance</fullName>
                </value>
                <value>
                    <fullName>In House Build</fullName>
                </value>
                <value>
                    <fullName>Contract renegotiation</fullName>
                </value>
                <value>
                    <fullName>Lack of Communication</fullName>
                </value>
                <value>
                    <fullName>Never Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_won_or_lost_oppty__c</fullName>
        <description>What is the reason we won or lost the opportunity?  This is used by marketing for competitive analysis?</description>
        <inlineHelpText>What is the reason we won or lost the opportunity?  This is used by marketing and sales management for competitive analysis? Please state in 2 or 3 sentences.</inlineHelpText>
        <label>Reason won or lost</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Notes__c</fullName>
        <label>Renewal Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <description>Renewal term in months.</description>
        <inlineHelpText>Renewal term in months.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rights_to_future_products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rights to future products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <description>Risks</description>
        <inlineHelpText>Risks</inlineHelpText>
        <label>Risks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Indiv_License_List__c</fullName>
        <description>Used to calculate fair value % and hidden from all users except admins.</description>
        <inlineHelpText>Used to calculate fair value % and hidden from all users except admins.</inlineHelpText>
        <label>Total License List Price</label>
        <summarizedField>OpportunityLineItem.List_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductTypeText__c</field>
            <operation>contains</operation>
            <value>License</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>Bundle</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>Adj</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>API Charge</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_of_Contract_Sales_Price__c</fullName>
        <description>Roll-up of all contract Sales prices not equal to bundle or adjustments to be used in fair value calculation.</description>
        <inlineHelpText>Roll-up of all contract Sales prices not equal to bundle or adjustments to be used in fair value calculation.</inlineHelpText>
        <label>Total License Contract Sales Price</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductTypeText__c</field>
            <operation>equals</operation>
            <value>License</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>Adj</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>API Charge</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Engineer - Secondary</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>